@@ -36,6 +36,7 @@ Template for new versions:
 - `open-legends`: don't interfere with the dragging of vanilla list scrollbars
 - `gui/create-item`: properly restrict bags to bag materials by default
 - `gui/create-item`: allow gloves and shoees to be made out of textiles by default
+- `exterminate`: don't classify dangerous non-invader units as friendly (e.g. snatchers)
 
 ## Misc Improvements
 - `open-legends`: allow player to cancel the "DF will now exit" dialog and continue browsing
